# ZMouse

./: Cargo.toml  LICENSE  NOTES.md  README.md  config.example.toml
.github/workflows/: quality.yml
resources/: AppIcon.icns
scripts/: bundle.sh
src/: config.rs  editor.rs  engine.rs  hid.rs  keymap.rs  main.rs  menubar.rs  probe.rs  scrolldbg.rs  tap.rs
tools/icongen/: Cargo.toml
tools/icongen/src/: main.rs
