[package]
name = "zmouse"
version = "0.1.0"
edition = "2024"
description = "Per-device mouse button and keystroke remapper for macOS"
license = "MIT"
repository = "https://github.com/Zelkonar/ZMouse"
readme = "README.md"
keywords = ["macos", "mouse", "remap", "hid", "menu-bar"]
categories = ["command-line-utilities"]

[dependencies]
core-foundation = "0.10.1"
core-graphics = "0.25.0"
dirs = "6.0.0"
eframe = "0.35.0"
objc2 = "0.6.4"
objc2-app-kit = "0.3.2"
objc2-core-foundation = "0.3.2"
objc2-foundation = "0.3.2"
objc2-io-kit = "0.3.2"
objc2-service-management = "0.3.2"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
